--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 					<div class="container">
 						<header>
 							<h2>Formulario</h2>
-							<p>Déjanos aquí tus comentarios y sugerencias sobre el juego.¡Tu opinión nos importa!</p>
+							<p>Déjanos aquí tus comentarios y sugerencias sobre el juego. ¡Tu opinión nos importa!</p>
 						</header>
 						<form method="post" action="https://script.google.com/macros/s/AKfycbyffHuCw6-kW1Cgo9wz4ptcSkAi7B7c9JtUjVbwbY2IDUI_yo0-PWS4gf6wKtyx7mdHVQ/exec" class="cta">
 							
@@ -183,7 +183,7 @@
         								<textarea name="massage" id="massage" cols="30" rows="10"></textarea>
       								</div>
 
-      						<button type="submit">Submit</button>
+      						<button type="submit">Enviar</button>
    
 						</form>
 					</div>
