--- a/campaña.html
+++ b/campaña.html
@@ -148,7 +148,9 @@
 												</table>
 											</div>			
 										</section>
-									</div>
+									</section>
+								</div>
+
 										<center>
 										<h3><u>Objetivos</u></h3>
 										<p>Estos son los objetivos que tenemos como parte de esta campaña de financiación</p>
