--- a/campaña.html
+++ b/campaña.html
@@ -157,8 +157,11 @@
 										
 										<iframe width="560" height="315" src="https://www.youtube.com/embed/z6PfPS53XNk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 										</center>
-			
-
+						</div>
+					</div>
+				</div>
+		</div>
+	</body>
 		
 
 		<div class="content">
