--- a/campaña.html
+++ b/campaña.html
@@ -86,7 +86,9 @@
 										</center>
 										<h3><u>Banda sonora</u></h3>
 										<p>Primera canción original de School Nightmares</p>
+										<center>
 										<iframe width="560" height="315" src="https://www.youtube.com/embed/r0Ip0ee7qso" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										</center>
 										<h3><u>Tabla de contribuciones</u></h3>
 										<p>Descubre como puedes ayudarnos a financiar el juego y los regalos que puedes obtener según la cantidad que dones</p>
 										<section>
