--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					<div class="content">
 						<header>
 							<h2>Descubre School Nightmares al completo</h2>
-							<p>Encuentra toda la información relativa al juego, como su historia, trailer, artwork, gameplay, como apoyarnos y más.</p>
+							<p>Encuentra toda la información relativa al juego, como su historia, tráiler, artwork, gameplay, cómo apoyarnos y más.</p>
 						</header>						
 						<ul class="actions">
 							<li><a href="campaña.html" class="button">Saber más</a></li>
@@ -116,7 +116,7 @@
 					<div class="container">
 						<header class="major">
 							<h2>El equipo de Dark Lighting Software.</h2>
-							<p>Descubre quienes somos y que hacemos cada uno en el juego</p>
+							<p>Descubre quiénes somos y el papel cada uno en el juego</p>
 						</header>
 						<div class="box alt">
 							<div class="row gtr-uniform">
