--- a/campaña.html
+++ b/campaña.html
@@ -80,7 +80,7 @@
 								<!-- Content -->
 									<section id="content">
 										
-										<h3><u>Descubre el primer trailer de School Nightmares</u></h3>
+										<h3><u>Descubre el primer tráiler de School Nightmares</u></h3>
 										<center>
 										<iframe width="560" height="315" src="https://www.youtube.com/embed/r0Ip0ee7qso" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 										</center>
@@ -157,7 +157,7 @@
 							<h3><u>Objetivos</u></h3>
 							<p>Estos son los objetivos que tenemos como parte de esta campaña de financiación</p>
 							
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/z6PfPS53XNk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/n3cqrNXulG8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</center>
 					</div>
 				</div>
