--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/pic04.png" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/kirby-kirby-cooked.gif" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Q&A</h2>
@@ -98,7 +98,7 @@
 			
 			<!-- Four -->
 				<section id="three" class="spotlight style3 right">
-					<span class="image fit main bottom"><img src="images/pic05.gif" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/rapture-ghostwire.gif" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Foro del juego</h2>
