--- a/campaña.html
+++ b/campaña.html
@@ -157,6 +157,14 @@
 							<h3><u>Objetivos</u></h3>
 							<p>Estos son los objetivos que tenemos como parte de esta campaña de financiación</p>
 							
+							<ul>
+											<li>Faucibus orci lobortis ac adipiscing integer.</li>
+											<li>Col accumsan arcu mi aliquet placerat.</li>
+											<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
+											<li>Blandit massa non blandit tempor interdum.</li>
+											<li>Lacinia mattis arcu nascetur lobortis.</li>
+							</ul>
+							
 							<iframe width="560" height="315" src="https://youtu.be/ih9zBLDr_ro" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</center>
 					</div>
