--- a/campaña.html
+++ b/campaña.html
@@ -154,11 +154,17 @@
 															<p>Estos son los objetivos que tenemos como parte de esta campaña de financiación</p>
 							
 															<ul>
-																<li>Faucibus orci lobortis ac adipiscing integer.</li>
-																<li>Col accumsan arcu mi aliquet placerat.</li>
-																<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
-																<li>Blandit massa non blandit tempor interdum.</li>
-																<li>Lacinia mattis arcu nascetur lobortis.</li>
+																<li><u>Meta inicial de 1000 €:</u> Sabremos que el proyecto cuenta con apoyo suficiente y estará completamente financiado</li>
+																<li><u>Meta de 1250 €:</u> Traducción del juego al español</li>
+																<li><u>Meta de 1500 €:</u> Posibilidad de repetir las batallas contra los jefes</li>
+																<li><u>Meta de 2000 €:</u> Publicación del juego en consolas de nueva generación (PS5 y Xbox Series X/S)</li>
+																<li><u>Meta de 2500 €:</u> Mejoras en animaciones y cinemáticas</li>
+																<li><u>Meta de 3500 €:</u> Nuevos enemigos, armas, indumentaria y personalización del personaje </li>
+																<li><u>Meta de 4500 €:</u> Más niveles y jefes únicos </li>
+																<li><u>Meta de 5500 €:</u> Creación de un modo cooperativo</li>
+																<li><u>Meta de 6000 €:</u> Compatibilidad con VR</li>
+																<li><u>Meta de 7500 €:</u> Adaptación de School Nightmares a manga</li>
+																<li><u>Meta de 9500 €:</u> Adaptacion de School Nightmares a anime</li>
 															</ul>
 							
 															<iframe width="560" height="315" src="https://www.youtube.com/embed/ih9zBLDr_ro" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
