--- a/Q&A.html
+++ b/Q&A.html
@@ -40,6 +40,18 @@
 
 						<!-- Text -->
 							<section>
+								<details>
+   									<summary>¿Cómo se llama el sitio?</summary>
+  									<p>La Webera</p>
+								</details>
+								<details>
+   									<summary>¿Cúal es la URL?</summary>
+   									<a href="https://www.lawebera.es/">https://www.lawebera.es/</a>
+								</details>
+								<details>
+  									<summary>¿Cúal es el logo?</summary>
+   									<div id="logo"></div>
+								</details>
 								<h3>Text</h3>
 								<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
 								This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
