--- a/Q&A.html
+++ b/Q&A.html
@@ -45,6 +45,10 @@
   									<p>El juego saldrá principalmente para PC. Uno de nuestro objetivos principales es conseguir publicarlo en las consolas de nueva generación Ps5 y Xbox series X/S</p>
 								</details>
 								<details>
+   									<summary>¿Para qué público está orientado el juego?</summary>
+  									<p>School Nightmares está principalmente orientado a un público adulto, ya que contiene escenas muy sangrientas, lenguaje soez, escenas horripilantes, drogas y desnudez</p>
+								</details>
+								<details>
    									<summary>¿Cuándo saldrá?</summary>
    									<p>El juego saldrá principalmente para PC. Uno de nuestro objetivos principales es conseguir publicarlo en las consolas de nueva generación Ps5 y Xbox series X/S</p>
 								</details>
@@ -56,19 +60,31 @@
   									<summary>¿Cuáles son los requisitos mínimos?</summary>
    									<p>Todavía no somos capaces de especificar unos requisitos mínimos, pero los publicaremos en cuanto los tengamos.</p>
 								</details>
-									<details>
+								<details>
   									<summary>¿En qué idioma/s estará disponible?</summary>
    									<p>El juego podrá jugarse completamente en inglés. Con el apoyo suficiente podremos traducirlo a otros idiomas.</p>
 								</details>
-									<details>
+								<details>
   									<summary>¿Puede jugarse en cooperativo?</summary>
 									<p> No. El juego es exclusivo al modo un jugador, pero uno de los objetivos de la campaña es incluir un modo multijugador, en caso de conseguir suficiente apoyo.</p>
 								</details>
-									<details>
+								<details>
+  									<summary>¿Cómo se distribuirá el juego a los contribuidores?</summary>
+									<p> Se les comunicará directamente a ellos a través de la red social que proporcionen al colaborar</p>
+								</details>
+								<details>
+  									<summary>¿Dónde puedo contactar con el diseñador gráfico del proyecto (el tony) que es muy guapo?</summary>
+									<p>Toma, su número: 697325449 ;)</p>
+								</details>
+								<details>
+  									<summary>¿Está planeada la adición de más contenido en alguna actualizacion futura?</summary>
+									<p>Tony: ¿no se, @Mario hay planeado contenido extra? Mario: ¿@Andrés hay planeado algo? Andrés: No responde. </p>
+								</details>
+								<details>
   									<summary>¿Es School Nightmares un juego real?</summary>
    									<p>No. Todo es un juego ficticio creado para una práctica de Multimedia de la URJC en el curso 2021/2022. Todo lo expuesto en la página es ficticio y no representa ningún producto real.</p>
 								</details>
-									<details>
+								<details>
   									<summary>Hay algun RickRoll oculto en la página</summary>
    									<li><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk">Ninguno, asegurado</a></li>
 								</details>
