Cambiado Untitled por DarkLightning

--- a/Q&A.html
+++ b/Q&A.html
@@ -74,8 +74,8 @@
 									<p> Se les comunicará directamente a ellos a través de la red social que proporcionen al colaborar</p>
 								</details>
 								<details>
-  									<summary>¿Dónde puedo contactar con el diseñador gráfico del proyecto (el tony) que es muy guapo?</summary>
-									<p>Toma, su número: 697325449 ;)</p>
+  									<summary>¿Dónde puedo contactar con el diseñador gráfico del proyecto?</summary>
+									<p>Puede contactar con él a través de su número de teléfono: 697325449.</p>
 								</details>
 								<details>
   									<summary>¿Está planeada la adición de más contenido en alguna actualizacion futura?</summary>
@@ -86,8 +86,8 @@
    									<p>No. Todo es un juego ficticio creado para una práctica de Multimedia de la URJC en el curso 2021/2022. Todo lo expuesto en la página es ficticio y no representa ningún producto real.</p>
 								</details>
 								<details>
-  									<summary>Hay algun RickRoll oculto en la página</summary>
-   									<li><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk">Ninguno, asegurado</a></li>
+  									<summary>¿Hay algun RickRoll oculto en la página?</summary>
+   									<li><a href="https://www.youtube.com/embed/5T5BY1j2MkE?start=9">Ninguno, asegurado</a></li>
 								</details>
 							</section>
 
