--- a/foro.html
+++ b/foro.html
@@ -53,7 +53,7 @@
 
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; DarkLighting. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						<p></p>
 						<p>ATENCIÓN: Esta página simula la campaña de microfinanciación de un videojuego ficticio y no representa un producto real.</p>
 						<p>Práctica de Multimedia, 1º GDDV - Curso 21/22 (Móstoles), URJC. La URJC no se hace responsable del contenido expuesto por el autor</p>
