--- a/historia.html
+++ b/historia.html
@@ -109,7 +109,7 @@
 						<li><a href="https://www.youtube.com/watch?v=GxM3wstBcD4" class="icon brands alt fa-paypal"><span class="label">Paypal</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; DarkLighting. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						<p></p>
 						<p>ATENCIÓN: Esta página simula la campaña de microfinanciación de un videojuego ficticio y no representa un producto real.</p>
 						<p>Práctica de Multimedia, 1º GDDV - Curso 21/22 (Móstoles), URJC. La URJC no se hace responsable del contenido expuesto por el autor</p>
