--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; DarkLighting. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						
 						<p> </p>
 						
