--- a/Q&A.html
+++ b/Q&A.html
@@ -41,7 +41,7 @@
 						<!-- Text -->
 							<section>
 								<details>
-   									<summary>¿Para qué plataformas saldrá?</summary>
+   									<summary><h6>¿Para qué plataformas saldrá?</h6></summary>
 									<p></p>
   									<p>El juego saldrá principalmente para PC. Uno de nuestro objetivos principales es conseguir publicarlo en las consolas de nueva generación Ps5 y Xbox series X/S</p>
 								</details>
@@ -82,6 +82,7 @@
 								</details>
 								<details>
   									<summary>¿Dónde puedo contactar con el diseñador gráfico del proyecto?</summary>
+									  <p></p>
 									<p>Puede contactar con él a través de su número de teléfono: 697325449.</p>
 								</details>
 								<details>
