--- a/Q&A.html
+++ b/Q&A.html
@@ -41,7 +41,7 @@
 						<!-- Text -->
 							<section>
 								<details>
-   									<summary><h6>¿Para qué plataformas saldrá?</h6></summary>
+   									<h3><summary>¿Para qué plataformas saldrá?</summary></h3>
 									<p></p>
   									<p>El juego saldrá principalmente para PC. Uno de nuestro objetivos principales es conseguir publicarlo en las consolas de nueva generación Ps5 y Xbox series X/S</p>
 								</details>
