--- a/Q&A.html
+++ b/Q&A.html
@@ -88,7 +88,7 @@
 								<details>
   									<summary>¿Está planeada la adición de más contenido en alguna actualizacion futura?</summary>
 									  <p></p>
-									<p>Tony: ¿no se, @Mario hay planeado contenido extra? Mario: ¿@Andrés hay planeado algo? Andrés: No responde. </p>
+									<p> Se pueden ver todos los objetivos del juego <a href = "campaña.html">aquí</href>.</p>
 								</details>
 								<details>
   									<summary>¿Es School Nightmares un juego real?</summary>
