--- a/Q&A.html
+++ b/Q&A.html
@@ -88,7 +88,12 @@
 								<details>
   									<summary>¿Está planeada la adición de más contenido en alguna actualizacion futura?</summary>
 									  <p></p>
-									<p> Se pueden ver todos los objetivos del juego <a href = "campaña.html">aquí</a>.</p>
+									<p> Se pueden ver todos los objetivos del juego <a href = "campaña.html"><script type = "text/javascript">function scrolling(){ 
+										window.scrollBy({ 
+										top: 3000, 
+										behavior: "smooth" 
+										}); 
+										}</script>í</a>.</p>
 								</details>
 								<details>
   									<summary>¿Es School Nightmares un juego real?</summary>
