--- a/Q&A.html
+++ b/Q&A.html
@@ -53,7 +53,7 @@
 								<details>
    									<summary>¿Cuándo saldrá?</summary>
 									   <p></p>
-   									<p>El juego saldrá principalmente para PC. Uno de nuestro objetivos principales es conseguir publicarlo en las consolas de nueva generación Ps5 y Xbox series X/S</p>
+   									<p>Tenemos previsto que el lanzamiento del juego sea en torno a octubre de 2023</p>
 								</details>
 								<details>
   									<summary>¿Cuál será el precio de salida?</summary>
