--- a/campaña.html
+++ b/campaña.html
@@ -168,7 +168,7 @@
 																<li><u>Meta de 9500 €:</u> Adaptacion de School Nightmares a anime</li>
 															</ul>
 															
-															<li><a href="https://www.youtube.com/embed/5T5BY1j2MkE?start=9">Puedes apoyarnos donando aquí</a></li>
+															<li><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk">Puedes apoyarnos donando aquí</a></li>
 															<p>Recuerda, este videojuego es ficticio, cualquier intento de donación puede (o no) ser redirigido a un rickrolleo. Proceda con cuidado</p>
 															<iframe width="560" height="315" src="https://www.youtube.com/embed/ih9zBLDr_ro" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 											</div>
