--- a/Q&A.html
+++ b/Q&A.html
@@ -98,7 +98,7 @@
 								<details>
   									<summary>¿Hay algun RickRoll oculto en la página?</summary>
 									  <p></p>
-   									<li><a href="https://www.youtube.com/embed/5T5BY1j2MkE?start=9">Ninguno, asegurado</a></li>
+   									<li><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk">Ninguno, asegurado</a></li>
 								</details>
 							</section>
 
