--- a/Q&A.html
+++ b/Q&A.html
@@ -101,7 +101,10 @@
    									<li><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk">Ninguno, asegurado</a></li>
 								</details>
 							</section>
-
+					</div>
+				</div>
+		</div>
+	</body>
 						<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
@@ -122,15 +125,6 @@
 						
 					</ul>
 				</footer>
-
-		</div>
-
-					</div>
-				</div>
-
-
-		</div>
-
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
