--- a/campaña.html
+++ b/campaña.html
@@ -87,7 +87,7 @@
 										<h3><u>Banda sonora</u></h3>
 										<p>Primera canción original de School Nightmares</p>
 										<center>
-										<audio src="IntoTheMadness.mp3" controls="controls"  type ="audio/mpeg" preload="preload" style= "color:rgb(79, 129, 160, 100)"></audio>
+										<audio src="IntoTheMadness.mp3" style="color:#4C7F9E" controls="controls"  type ="audio/mpeg" preload="preload"></audio>
 										</center>
 										<h3><u>Tabla de contribuciones</u></h3>
 										<p>Descubre como puedes ayudarnos a financiar el juego y los regalos que puedes obtener según la cantidad que dones</p>
