--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 			
 			<!-- Four -->
 				<section id="three" class="spotlight style3 right">
-					<span class="image fit main bottom"><img src="images/rapture-ghostwire.gif" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/prueba_fondo3.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Foro del juego</h2>
