--- a/campaña.html
+++ b/campaña.html
@@ -88,7 +88,11 @@
 										<p>Primera canción original de School Nightmares</p>
 										<center>
 										<audio src="IntoTheMadness.mp3" style="color:#4C7F9E" controls="controls"  type ="audio/mpeg" preload="preload">ola</audio>
-										</center>
+										</center><br>
+										<p>Segunda canción original de School Nightmares</p>
+										<center>
+										<audio src="Conversation.mp3" style="color:#4C7F9E" controls="controls"  type ="audio/mpeg" preload="preload">caracola</audio>
+										</center><br>
 										<h3><u>Tabla de contribuciones</u></h3>
 										<p>Descubre como puedes ayudarnos a financiar el juego y los regalos que puedes obtener según la cantidad que dones</p>
 										<section>
