--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 				</section>
 			
 			<!-- Four -->
-				<section id="three" class="spotlight style3 right">
+				<section id="four" class="spotlight style3 right">
 					<span class="image fit main bottom"><img src="images/prueba_fondo4.jpg" alt="" /></span>
 					<div class="content">
 						<header>
@@ -108,15 +108,11 @@
 							<li><a href="foro.html" class="button">Saber más</a></li>
 						</ul>
 					</div>
-					<a href="#four" class="goto-next scrolly">Next</a>
+					<a href="#five" class="goto-next scrolly">Next</a>
 				</section>
-
+			
 			<!-- Five -->
-				
-				<p></p>
-				<p></p>
-				<p></p>
-			<!-- Six -->
+			
 				<section id="five" class="wrapper style2 special">
 					<div class="container">
 						<header>
