--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 							<h2><b>School Nightmares</b></h2>
 							
 						</header>
+						<span class="image"><img src="images/logo.png" alt="" /></span>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
