--- a/index.html
+++ b/index.html
@@ -33,11 +33,8 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="content">
-						<header>
-							<h2><b>School Nightmares</b></h2>
-							
-						</header>
-						<span class="image"><img src="images/logo.png" alt="" /></span>
+						
+						<img src="images/logo.png" alt="" />
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
