--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="content">
-						
-						<img src="images/logo.png" alt="" />
+						<header>
+							<img src="images/logo.png" alt="" />
+						</header>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
