--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<img src="images/logo.png" alt="" />
+							<img src="images/logo.png" width=80%alt="" />
 						</header>
 						
 					</div>
