--- a/campaña.html
+++ b/campaña.html
@@ -43,7 +43,7 @@
 								<!-- Sidebar -->
 									<section id="sidebar">
 										<section>
-											<a class="image fit"><img src="images/puertatoori.jpg" alt="" /></a>
+											<a class="image fit"><img src="images/historia.png" alt="" /></a>
 											<h3>Historia</h3>
 											<p>Descubre aquí todo sobre la historia de nuestro juego</p>
 											<footer>
