--- a/campaña.html
+++ b/campaña.html
@@ -43,7 +43,7 @@
 								<!-- Sidebar -->
 									<section id="sidebar">
 										<section>
-											<a class="image fit"><img src="images/historia.png" alt="" /></a>
+											<img src="images/historia.png" width=100% height=30% alt="" />
 											<h3>Historia</h3>
 											<p>Descubre aquí todo sobre la historia de nuestro juego</p>
 											<footer>
