--- a/campaña.html
+++ b/campaña.html
@@ -54,7 +54,7 @@
 										</section>
 										<hr />
 										<section>
-											<a class="image fit"><img src="images/gameplay.png" alt="" /></a>
+											<a class="image fit"><img src="images/gameplay.png" width=100% height=30% alt="" /></a>
 											<h3>Gameplay</h3>
 											<p>Descubre todo acerca del frenético gameplay de School Nightmares</p>
 											<footer>
