--- a/campaña.html
+++ b/campaña.html
@@ -65,7 +65,7 @@
 										</section>
 										<hr />
 										<section>
-											<a class="image fit"><img src="images/puertatoori.jpg" alt="" /></a>
+											<img src="images/artwork.png" width=100% height=30% alt="" />
 											<h3>Artwork</h3>
 											<p>Descubre arte conceptual de los personajes, enemigos y escenarios de School Nightmares</p>
 											<footer>
