--- a/gameplay.html
+++ b/gameplay.html
@@ -43,7 +43,7 @@
 								<!-- Sidebar -->
 									<section id="sidebar">
 										<section>
-											<a class="image fit"><img src="images/puertatoori.jpg" alt="" /></a>
+											<img src="images/historia.png" width=100% height=30% alt="" />
 											<h3>Historia</h3>
 											<p>Descubre aquí todo sobre la historia de nuestro juego</p>
 											<footer>
@@ -54,7 +54,7 @@
 										</section>
 										<hr />
 										<section>
-											<a class="image fit"><img src="images/puertatoori.jpg" alt="" /></a>
+											<img src="images/artwork.png" width=100% height=30% alt="" />
 											<h3>Artwork</h3>
 											<p>Descubre arte conceptual de los personajes, enemigos y escenarios de School Nightmares</p>
 											<footer>
@@ -65,7 +65,7 @@
 										</section>
 										<hr />
 										<section>
-											<a class="image fit"><img src="images/puertatoori.jpg" alt="" /></a>
+											<img src="images/campana.png" width=100% height=30% alt="" />
 											<h3>Campaña</h3>
 											<p>Descubre todo sobre School Nightmares, además de cómo apoyarnos a financiar el proyecto</p>
 											<footer>
