--- a/campaña.html
+++ b/campaña.html
@@ -96,6 +96,7 @@
 										<audio src="Conversation.mp3" style="color:#4C7F9E" controls="controls"  type ="audio/mpeg" preload="preload">caracola</audio>
 										</center><br>
 										<center>
+										<p>Tercera canción original de School Nightmares</p>
 										<audio src="tercera.mpeg" style="color:#4C7F9E" controls="controls"  type ="audio/mpeg" preload="preload">uwu</audio>
 										</center><br>
 										<h3><u>Tabla de contribuciones</u></h3>
