--- a/historia.html
+++ b/historia.html
@@ -32,7 +32,7 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Historia</h2>
+							<h2>Descripción e Historia</h2>
 							<p>Descubre aquí todo sobre la historia de nuesto juego</p>
 						</header>
 						<div class="row gtr-150">
