--- a/artwork.html
+++ b/artwork.html
@@ -109,6 +109,7 @@
 						<p></p>
 						<p>ATENCIÓN: Esta página simula la campaña de microfinanciación de un videojuego ficticio y no representa un producto real.</p>
 						<p>Práctica de Multimedia, 1º GDDV - Curso 21/22 (Móstoles), URJC. La URJC no se hace responsable del contenido expuesto por el autor</p>
+						<p>Las imágenes de fondos y escenarios están realizadas usando la IA de Wombo Dream</p>
 					</ul>
 				</footer>
 
