--- a/artwork.html
+++ b/artwork.html
@@ -93,7 +93,7 @@
 										<a href="#" class="image fit"><img src="images/concept_todos.jpg" alt="" /></a>
 										<a href="#" class="image fit"><img src="images/sketch2.png" alt="" /></a>
 										
-										<h3>Enscenarios</h3>
+										<h3>Escenarios</h3>
 										
 										<a href="#" class="image fit"><img src="images/prueba_fondo1.jpg" alt="" /></a>
 										<a href="#" class="image fit"><img src="images/prueba_fondo2.jpg" alt="" /></a>
