--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
-										<h2>Ayuda Suzuki Shinji a escapar de su escuela, que está infestada de hordas de monstruos.</h2>
+										<h2>Ayuda a Suzuki Shinji a escapar de su escuela, que está infestada de hordas de monstruos.</h2>
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
