--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         								<textarea name="massage" id="massage" cols="30" rows="10"></textarea>
       								</div>
 
-      						<button type="submit">Enviar</button>
+      						<a href="#header"><button type="submit">Enviar</button></a>Prueba
    
 						</form>
 					</div>
