--- a/index.html
+++ b/index.html
@@ -117,9 +117,8 @@
 							<h2>Formulario</h2>
 							<p>Déjanos aquí tus comentarios y sugerencias sobre el juego. ¡Tu opinión nos importa!</p>
 						</header>
-						<form method="post" action="https://script.google.com/macros/s/AKfycbyffHuCw6-kW1Cgo9wz4ptcSkAi7B7c9JtUjVbwbY2IDUI_yo0-PWS4gf6wKtyx7mdHVQ/exec" class="cta">
-							
-							<form action="contact.php" method="POST" id="my-form">
+						
+						<form class="gform pure-form pure-form-stacked" method="POST" data-email="example@email.net" action="https://script.google.com/macros/s/AKfycbwMxYDrufp73bKdU8gMvxFDdHRuzcR4IKQUB33B7GqwyfyZS04/exec">
 
       								<div class="form-group">
        									 <label for="firstName"> Nombre</label>
