--- a/index.html
+++ b/index.html
@@ -135,7 +135,12 @@
         								<textarea name="massage" id="massage" cols="30" rows="10"></textarea>
       								</div>
 
-      						<button type="submit">Enviar</button>
+      						<button type="submit">Enviar</button> prueba
+							
+								<div class="thankyou_message" style="display:none;">
+      									<h2><em>¡Gracias!</em> por contactarnos!
+        								¡Tendremos en cuenta tus opiniones y sugerencias!</h2>
+   								 </div>
    
 						</form>
 					</div>
