--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         								<textarea name="massage" id="massage" cols="30" rows="10"></textarea>
       								</div>
 
-      						<button type="submit">Enviar</button> prueba
+      						<button type="submit">Enviar</button>
 							
 								<div class="thankyou_message" style="display:none;">
       									<h2><em>¡Gracias!</em> por contactarnos!
