--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
         								<textarea name="massage" id="massage" cols="30" rows="10"></textarea>
       								</div>
       						<button type="submit">Enviar</button>
+								<div class="thankyou_message" style="display:none;">
+      									<h2><em>¡Gracias!</em> por contactarnos!
+        								¡Tendremos en cuenta tus opiniones y sugerencias!</h2>
+   								 </div
    
 						</form>
 					</div>
