--- a/Q&A.html
+++ b/Q&A.html
@@ -34,7 +34,7 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Q&A</h2>
+							<h2>Preguntas Frecuentes</h2>
 							<p>Encuentra aquí las respuestas a las posibles preguntas que te puedan surgir</p>
 						</header>
 
