--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					<span class="image fit main bottom"><img src="images/prueba_fondo2.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Q&A</h2>
+							<h2>Preguntas Frecuentes</h2>
 							<p>Encuentra la respuesta a las posibles preguntas que puedas tener sobre School Nightmares</p>
 						</header>
 						<ul class="actions">
