--- a/historia.html
+++ b/historia.html
@@ -79,18 +79,16 @@
 
 								<!-- Content -->
 									<section id="content">										
-										<h3>Historia</h3>
-										<p>Aquí va la descripción media que tenemos que hacer</p>
-										<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique.</p>
-										<h3>Sed Magna Ornare</h3>
-										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
-										<ul>
-											<li>Faucibus orci lobortis ac adipiscing integer.</li>
-											<li>Col accumsan arcu mi aliquet placerat.</li>
-											<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
-											<li>Blandit massa non blandit tempor interdum.</li>
-											<li>Lacinia mattis arcu nascetur lobortis.</li>
-										</ul>
+										<h3>Descripción del juego</h3>
+										<p> School Nightmares es un videojuego del genero “Survival Horror”, en el que el jugador deberá manejar a Shuzuki Shinji, un jóven de dieciséis años que se despierta en su habitación del internado como en cualquier día, pero al salir para asistir a las clases descubre que el lugar está infestado de una serie de seres que parecen sacados de otro mundo. Además, recibe una llamada a través del walkie-talkie de su amiga Miyazaki Chihiro, quien al parecer se encuentra rodeada de monstruos, por lo que se verá obligado a hacer todo lo posible por rescatarla. 
+										A diferencia de otros juegos del género, School Nightmares no tiene un gameplay típico de shooter, con distintas armas y munición a recoger, sino que fundamenta la jugabilidad en los poderes sobrenaturales de Shuzuki Shinji, que le permitirán mover objetos con la mente y enfrentarse a sus enemigos a distancia. Además, estos poderes podrán mejorarse a medida que avance la trama y Shinji se vea obligado a llevar sus habilidades al límite con el fin de poder poner fin a la situación y huir del internado con los supervivientes que hayan conseguido sobrevivir a la masacre.
+										El juego tiene una fecha de lanzamiento estimada de Octubre de 2023, y estará orientado a un público mayor de edad, por su recurrente uso de la violencia, sangre y lenguaje soez.
+										Saldrá a la venta en digital y en físico en PC y, posteriormente en PS5 y XBox One X si se alcanza el objetivo. </p>
+										<h3>Historia del juego</h3>
+										<p>School Nightmares es un videojuego del genero “Survival Horror”, en el que el jugador deberá manejar a Shuzuki Shinji, un jóven de dieciséis años que se despierta en su habitación del internado como en cualquier día, pero al salir para asistir a las clases descubre que el lugar está infestado de una serie de seres que parecen sacados de otro mundo. Además, recibe una llamada a través del walkie-talkie de su amiga Miyazaki Chihiro, quien al parecer se encuentra rodeada de monstruos, por lo que se verá obligado a hacer todo lo posible por rescatarla. 
+										A diferencia de otros juegos del género, School Nightmares no tiene un gameplay típico de shooter, con distintas armas y munición a recoger, sino que fundamenta la jugabilidad en los poderes sobrenaturales de Shuzuki Shinji, que le permitirán mover objetos con la mente y enfrentarse a sus enemigos a distancia. Además, estos poderes podrán mejorarse a medida que avance la trama y Shinji se vea obligado a llevar sus habilidades al límite con el fin de poder poner fin a la situación y huir del internado con los supervivientes que hayan conseguido sobrevivir a la masacre.
+										El juego tiene una fecha de lanzamiento estimada de Octubre de 2023, y estará orientado a un público mayor de edad, por su recurrente uso de la violencia, sangre y lenguaje soez.
+										Saldrá a la venta en digital y en físico en PC y, posteriormente en PS5 y XBox One X si se alcanza el objetivo.</p>
 									</section>
 
 							</div>
