--- a/gameplay.html
+++ b/gameplay.html
@@ -82,18 +82,12 @@
 								<!-- Content -->
 									<section id="content">
 										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-										<h3>Dolore Amet Consequat</h3>
-										<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-										<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique.</p>
-										<h3>Sed Magna Ornare</h3>
-										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
-										<ul>
-											<li>Faucibus orci lobortis ac adipiscing integer.</li>
-											<li>Col accumsan arcu mi aliquet placerat.</li>
-											<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
-											<li>Blandit massa non blandit tempor interdum.</li>
-											<li>Lacinia mattis arcu nascetur lobortis.</li>
-										</ul>
+										<h3>Utiliza poderosas habilidades</h3>
+										<p>Al despertar en su habitación, Shinji descubre que ha adquirido unos misteriosos poderes sobrenaturales que le permite realizar ataques controlando objetos con la mente, así como utilizando poderes elementales como el aire, el agua y el fuego para derrotar a todos sus enemigos. De esta forma, puede utilizar estos ataques de forma simple, o incluso cargarlos para derrotar a los enemigos que se oponen en su camino.</p>
+										<h3>Controla el entorno</h3>
+										<p>Shuzuki cuenta con la habilidad de controlar objetos con la mente, lo que le permite utilizarlos de bloqueo e incluso para arrojarlos a los enemigos e infligir daño. </p>
+										<h3>Mejora tus habilidades de combate</h3>
+										<p>A medida que derrote a enemigos, Shinji será capaz de mejorar su control sobre sus poderes, gracias a un árbol de habilidades que le permitirá desde poder disparar más rápido, hasta tardar menos tiempo en cargar sus ataques.</p>
 									</section>
 
 							</div>
