--- a/index.html
+++ b/index.html
@@ -133,12 +133,7 @@
        									 <label for="massage">Mensaje</label>
         								<textarea name="massage" id="massage" cols="30" rows="10"></textarea>
       								</div>
-      								<button type="submit">Enviar</button>
-								<div>
-									class="thankyou_message" style="display:none;"
-      									<h2><em>¡Gracias!</em> por contactarnos!
-        								¡Tendremos en cuenta tus opiniones y sugerencias!</h2>
-								</div>
+      								<li> <a href="foro.html" type="submit" class= "button">Enviar</a></li>					
    
 						</form>
 					</div>
