--- a/index.html
+++ b/index.html
@@ -133,7 +133,12 @@
        									 <label for="massage">Mensaje</label>
         								<textarea name="massage" id="massage" cols="30" rows="10"></textarea>
       								</div>
-      								<li> <a href="foro.html" type="submit" class= "button">Enviar</a></li>					
+      								<button type="submit">Enviar</button>
+								<div>
+									class="thankyou_message" style="display:none;"
+      									<h2><em>¡Gracias!</em> por contactarnos!
+        								¡Tendremos en cuenta tus opiniones y sugerencias!</h2>
+								</div>				
    
 						</form>
 					</div>
