--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
 		</div>
 
 		<!-- Scripts -->
-			<script data-cfasync="false" type="text/javascript" src="form-submission-handler.js"></script>
+			<script data-cfasync="false" type="text/javascript"
+src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/jquery.dropotron.min.js"></script>
