--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
        									 <label for="massage">Mensaje</label>
         								<textarea name="massage" id="massage" cols="30" rows="10"></textarea>
       								</div>
-								<div>
+								<div style="display;none" id="thankyou_message">
 									class="thankyou_message" style="display:none;"
       									<h2><em>¡Gracias!</em> por contactarnos!
         								¡Tendremos en cuenta tus opiniones y sugerencias!</h2>
