--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
       	  								<input type="email" id="email" name="email">
      		 						</div>
       								<div class="form-group">
-       									 <label for="massage">Mensaje</label>
-        								<textarea name="massage" id="massage" cols="30" rows="10"></textarea>
+       									 <label for="message">Mensaje</label>
+        								<textarea name="message" id="message" cols="30" rows="10"></textarea>
       								</div>
 								<div style="display;none" id="thankyou_message">
       									<h2><em>¡Gracias!</em> por contactarnos!
