--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
        									 <label for="message">Mensaje</label>
         								<textarea name="message" id="message" cols="30" rows="10"></textarea>
       								</div>
-								<div style="display;none" id="thankyou_message">
+								<div style="display:none" id="thankyou_message">
       									<h2><em>¡Gracias!</em> por contactarnos!
         								¡Tendremos en cuenta tus opiniones y sugerencias!</h2>
 								</div>				
@@ -167,6 +167,7 @@
 		</div>
 
 		<!-- Scripts -->
+		<script data-cfasync="false" type="text/javascript" src="form-submission-handler.js"></script>
 			<script data-cfasync="false" type="text/javascript"
 src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script>
 			<script src="assets/js/jquery.min.js"></script>
