--- a/foro.html
+++ b/foro.html
@@ -70,7 +70,7 @@
 						<li><a href="https://www.youtube.com/channel/UCEu6vwnj0UsZvHfIECkk5Uw" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a></li>
 						<li><a href="https://www.instagram.com/schoolnightmares/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://youtu.be/gM6ZHnqfftA" class="icon brands alt fa-steam"><span class="label">Steam</span></a></li>
-						<li><a href="https://www.youtube.com/watch?v=GxM3wstBcD4" class="icon brands alt fa-paypal"><span class="label">Paypal</span></a></li>
+						<li><a href="https://www.paypal.com/paypalme/404" class="icon brands alt fa-paypal"><span class="label">Paypal</span></a></li>
 
 
 					</ul>
