--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 						<li><a href="https://www.youtube.com/channel/UCEu6vwnj0UsZvHfIECkk5Uw" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a></li>
 						<li><a href="https://www.instagram.com/schoolnightmares/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://youtu.be/gM6ZHnqfftA" class="icon brands alt fa-steam"><span class="label">Steam</span></a></li>
-						<li><a href="https://www.youtube.com/watch?v=GxM3wstBcD4" class="icon brands alt fa-paypal"><span class="label">Paypal</span></a></li>
+						<li><a href="https://www.paypal.com/paypalme/404" class="icon brands alt fa-paypal"><span class="label">Paypal</span></a></li>
 
 					</ul>
 					<ul class="copyright">
@@ -167,7 +167,7 @@
 		</div>
 
 		<!-- Scripts -->
-		<script data-cfasync="false" type="text/javascript" src="form-submission-handler.js"></script>
+		<script data-cfasync="false" type="text/javascript" src="assets/js/form-submission-handler.js"></script>
 			<script data-cfasync="false" type="text/javascript"
 src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script>
 			<script src="assets/js/jquery.min.js"></script>
