--- a/artwork.html
+++ b/artwork.html
@@ -9,6 +9,7 @@
 		<title>Artwork</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -79,43 +80,42 @@
 
 								<!-- Content -->
 									<section id="content">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<h3>Personajes</h3>
 										<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        									<ol class="carousel-indicators">
-       										<li data-target="#carouselExampleIndicators" data-slide-to="0" class=""></li>
-        									<li data-target="#carouselExampleIndicators" data-slide-to="1" class=""></li>
-        									<li data-target="#carouselExampleIndicators" data-slide-to="2" class="active"></li>
-        									</ol>
-    										<div class="carousel-inner">
+        <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+    <div class="carousel-inner">
 
-    									<!-- –– primera imagen ––-->
+    <! –– primera imagen ––>
 
-   									 <div class="carousel-item">
-      									 <img class="rounded" height="70%" width="80%" src="imgs/concept_multimedia_1.png" alt="First slide">
-    									 </div>
+    <div class="carousel-item active">
+      <img class="image fit" src="images/prota_002.jpg" alt="First slide" >
+    </div>
 
-   									 <!-- –– segunda imagen ––-->
+    <! –– segunda imagen ––>
 
-   									 <div class="carousel-item">
-     									 <img class="rounded" height="70%" width="80%" src="imgs/prota_002.jpg" alt="Second slide">
-    									 </div>
+    <div class="carousel-item">
+      <img class="image fit" src="imgs/images/girl.jpg" alt="Second slide">
+    </div>
 
-    									 <!-- –– tercera imagen ––-->
+    <! –– tercera imagen ––>
 
-    									 <div class="carousel-item active">
-     									 <img class="rounded" height="70%" width="80%" src="imgs/girl.jpg" alt="Third slide">
-   									 </div>
-  								</div>
-  								<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    									<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    									<span class="sr-only">Previous</span>
- 								</a>
- 							        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    									<span class="carousel-control-next-icon" aria-hidden="true"></span>
-    									<span class="sr-only">Next</span>
-  								</a>
-										</div>
+    <div class="carousel-item">
+      <img class="image fit" src="images/concept_multimedia_1.png" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+  </div>
 										
 										<h3>Enemigos</h3>
 										
