--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 							<p>Déjanos aquí tus comentarios y sugerencias sobre el juego. ¡Tu opinión nos importa!</p>
 						</header>
 						
-						<form id="gform" method="post" action="https://script.google.com/macros/s/AKfycbyffHuCw6-kW1Cgo9wz4ptcSkAi7B7c9JtUjVbwbY2IDUI_yo0-PWS4gf6wKtyx7mdHVQ/exec">
+						<form id="gform" method="post">
 							
       								<div class="form-group">
        									 <label for="firstName"> Nombre</label>
