--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       									<h2><em>¡Gracias!</em> por contactarnos!
         								¡Tendremos en cuenta tus opiniones y sugerencias!</h2>
 								</div>				
-      								<a href="index.html"><button>Enviar</button></a>
+      								<button onClick="window.location.reload();">Enviar</button>
    
 						</form>
 					</div>
