--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 							<p>Déjanos aquí tus comentarios y sugerencias sobre el juego. ¡Tu opinión nos importa!</p>
 						</header>
 						
-						<form id="gform" method="post">
+						<form id="gform">
 							
       								<div class="form-group">
        									 <label for="firstName"> Nombre</label>
