--- a/campaña.html
+++ b/campaña.html
@@ -254,7 +254,7 @@
 						
 						<p>ATENCIÓN: Esta página simula la campaña de microfinanciación de un videojuego ficticio y no representa un producto real.</p>
 						<p>Práctica de Multimedia, 1º GDDV - Curso 21/22 (Móstoles), URJC. La URJC no se hace responsable del contenido expuesto por el autor</p>
-						<p>Las imágenes de fondos y escenarios están realizadas usando la IA de Wombo Dream</p>
+						<p>Algunas imágenes están realizadas usando la IA de Wombo Dream u obtenidas del juego Ghostwire: Tokyo</p>
 					</ul>
 			</footer>
 			
