--- a/campaña.html
+++ b/campaña.html
@@ -177,9 +177,8 @@
 																<li><u>Meta de 7500 €:</u> Adaptación de School Nightmares a manga</li>
 																<li><u>Meta de 9500 €:</u> Adaptacion de School Nightmares a anime</li>
 															</ul>
-															
-															<li><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk">Puedes apoyarnos donando aquí</a></li>
-															<p>Recuerda, este videojuego es ficticio, cualquier intento de donación puede (o no) ser redirigido a un rickrolleo. Proceda con cuidado</p>
+															<p>¡Puedes apoyarnos donando aquí!</p>
+															<li><a href="https://www.paypal.com/paypalme/404" class="button">Apoyar</a></li>
 															
 											</div>
 										</section>
