--- a/gameplay.html
+++ b/gameplay.html
@@ -9,6 +9,7 @@
 		<title>Gameplay</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -84,6 +85,56 @@
 										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<h3>Utiliza poderosas habilidades</h3>
 										<p>Al despertar en su habitación, Shinji descubre que ha adquirido unos misteriosos poderes sobrenaturales que le permite realizar ataques controlando objetos con la mente, así como utilizando poderes elementales como el aire, el agua y el fuego para derrotar a todos sus enemigos. De esta forma, puede utilizar estos ataques de forma simple, o incluso cargarlos para derrotar a los enemigos que se oponen en su camino.</p>
+										<!-- Content -->
+									<section id="content">
+										
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="images/prota_002.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="images/girl.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="images/concept_multimedia_1.png" alt="Third slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="images/kitsune.jpg" alt="Fourth slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="images/umbrella.jpg" alt="Fifth slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="images/concept_todos.jpg" alt="Sixth slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="images/sketch2.png" alt="Seventh slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="images/prueba_fondo1.jpg" alt="Eighth slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="images/prueba_fondo2.jpg" alt="Ninth slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="images/prueba_fondo4.jpg" alt="Tenth slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="images/puertatoori.jpg" alt="Eleventh slide">
+    </div>
+  </div>
+	
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+										
 										<h3>Controla el entorno</h3>
 										<p>Shuzuki cuenta con la habilidad de controlar objetos con la mente, lo que le permite utilizarlos de bloqueo e incluso para arrojarlos a los enemigos e infligir daño. </p>
 										<h3>Mejora tus habilidades de combate</h3>
