--- a/gameplay.html
+++ b/gameplay.html
@@ -91,38 +91,14 @@
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="images/prota_002.jpg" alt="First slide">
+      <img class="d-block w-100" src="images/poderaire.jpg" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="images/girl.jpg" alt="Second slide">
+      <img class="d-block w-100" src="images/poderagua.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="images/concept_multimedia_1.png" alt="Third slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="images/kitsune.jpg" alt="Fourth slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="images/umbrella.jpg" alt="Fifth slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="images/concept_todos.jpg" alt="Sixth slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="images/sketch2.png" alt="Seventh slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="images/prueba_fondo1.jpg" alt="Eighth slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="images/prueba_fondo2.jpg" alt="Ninth slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="images/prueba_fondo4.jpg" alt="Tenth slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="images/puertatoori.jpg" alt="Eleventh slide">
-    </div>
+      <img class="d-block w-100" src="images/poderfuego.jpg" alt="Third slide">
+	  </div>
   </div>
 	
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
