añadida foto arbol habilidades

--- a/gameplay.html
+++ b/gameplay.html
@@ -115,7 +115,8 @@
 										<p>Shuzuki cuenta con la habilidad de controlar objetos con la mente, lo que le permite utilizarlos de bloqueo e incluso para arrojarlos a los enemigos e infligir daño. </p>
 										<h3>Mejora tus habilidades de combate</h3>
 										<p>A medida que derrote a enemigos, Shinji será capaz de mejorar su control sobre sus poderes, gracias a un árbol de habilidades que le permitirá desde poder disparar más rápido, hasta tardar menos tiempo en cargar sus ataques.</p>
-									</section>
+										<a class="image fit"><img src="images/arbolhabilidades.jpg" alt="" /></a>
+								</section>
 
 							</div>
 						</div>
