--- a/campaña.html
+++ b/campaña.html
@@ -44,7 +44,7 @@
 									<section id="sidebar">
 										<section>
 											<img src="images/historia.png" width=100% height=30% alt="" />
-											<h3>Historia</h3>
+											<h3>Descripción e Historia</h3>
 											<p>Descubre aquí todo sobre la historia de nuestro juego</p>
 											<footer>
 												<ul class="actions">
