--- a/artwork.html
+++ b/artwork.html
@@ -84,7 +84,7 @@
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="images/prota_002.jpg" alt="First slide">
+      <img class="d-block w-100" src="images/caratula.jpg" alt="First slide">
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="images/girl.jpg" alt="Second slide">
@@ -115,6 +115,9 @@
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="images/puertatoori.jpg" alt="Eleventh slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="images/prota_002.jpg" alt="Second slide">
     </div>
   </div>
 	
