--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					
 				<section id="two" class="wrapper style2 special">
 					<div class="container">
-						<span class="image fit main bottom"><img src="images/caratula.jpg" alt="" /></span>
+						<img class="d-block w-100" src="images/caratula.jpg" alt="First slide">
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
 				</section>
