--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					
 				<section id="one" class="wrapper style2 special">
 					<div class="container">
-						<img class="d-block w-100" src="images/caratula.jpg" alt="First slide">
+						<img width=50% height=70% src="images/caratula.jpg" alt="First slide">
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</section>
