--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</section>
-					
+				<section id="one" class="spotlight style1 bottom">
+					<span class="image fit main"><img src="images/caratula.jpg" alt="" /></span>
+					<a href="#two" class="goto-next scrolly">Next</a>
+				</section>	
 			<!-- Two -->		
 					
 				<section id="two" class="spotlight style1 bottom">
