--- a/campaña.html
+++ b/campaña.html
@@ -114,42 +114,42 @@
 													<tbody>
 															<tr>
 																<td>Tier 1</td>
-																<td>Insignia especial en el foro + nuestra eterna gratitud</td>
+																<td>Insignia especial en el foro</td>
 																<td>5 € o más</td>
 															</tr>
 															<tr>
 																<td>Tier 2</td>
-																<td>Copia del juego en la plataforma deseada cuando salga + ventajas del tier 1</td>
+																<td>Copia del juego en la plataforma deseada cuando salga + Ventajas del tier 1</td>
 																<td>15 € o más</td>
 															</tr>
 															<tr>
 																<td>Tier 3</td>
-																<td>Acceso a la beta + mención en los créditos como contribuidor + ventajas del tier 2</td>
+																<td>Acceso a la beta + mención en los créditos como contribuidor + Ventajas del tier 2</td>
 																<td>20 € o más</td>
 															</tr>
 															<tr>
 																<td>Tier 4</td>
-																<td>Otra copia del juego + ventajas del tier 3</td>
+																<td>Otra copia del juego + Ventajas del tier 3</td>
 																<td>30 € o más</td>
 															</tr>
 															<tr>
 																<td>Tier 5</td>
-																<td>Posters de School Nightmares + B.S.O digital + ventajas del tier 4</td>
+																<td>Posters de School Nightmares + B.S.O digital + Ventajas del tier 4</td>
 																<td>50 € o más</td>
 															</tr>
 															<tr>
 																<td>Tier 6</td>
-																<td>Foto con el estilo gráfico del juego a modo de cuadro en los pasillos y aulas del colegio + diseño del aspecto físico de un enemigo genérico + ventajas de tier 5</td>
+																<td>Foto con el estilo gráfico del juego a modo de cuadro en los pasillos y aulas del colegio + diseño del aspecto físico de un enemigo genérico + Ventajas de tier 5</td>
 																<td>70 € o más</td>
 															</tr>
 															<tr>
 																<td>Tier 7</td>
-																<td>Libro de arte físico de alta calidad + B.S.O en vinilo + ventajas del tier 6</td>
+																<td>Libro de arte físico de alta calidad + B.S.O en vinilo + Ventajas del tier 6</td>
 																<td>90 € o más</td>
 															</tr>
 															<tr>
 																<td>Tier 8</td>
-																<td>Camiseta de School Nightmares + ventajas del tier 7</td>
+																<td>Camiseta de School Nightmares + Ventajas del tier 7</td>
 																<td>100 € o más</td>
 															</tr>
 						
