--- a/campaña.html
+++ b/campaña.html
@@ -201,13 +201,13 @@
 									<img class="rounded-circle" width=200px height=200px src="images/mario.jpg" alt="" />
 									<h3 align=center>Mario González</h3>
 									<p align=center> Modelado 3D de escenarios y personajes</p>
-									<p align=center>(Programación página web)</p>
+									<p align=center>(Textos y programación de la página web)</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<img class="rounded-circle" width=200px height=200px src="images/tony.jpg" alt="" />
 									<h3 align=center>Antonio López</h3>
 									<p align=center>Arte conceptual de personajes y escenarios</p>
-									<p align=center>(Arte conceptual)</p>
+									<p align=center>(Arte conceptual, programación de la página web y música)</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<img class="rounded-circle" width=200px height=200px src="images/diego.jpg" alt="" />
@@ -219,13 +219,13 @@
 									<img class="rounded-circle" width=200px height=200px src="images/sancho.jpg" alt="" />
 									<h3 align=center>Sancho Quesada</h3>
 									<p align=center>Música</p>
-									<p align=center>(Música)</p>
+									<p align=center>(Música y programación de la página web)</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<img class="rounded-circle" width=200px height=200px src="images/andres.jpg" alt="" />
 									<h3 align=center>Andrés Ruiz</h3>
 									<p align=center>Guión y diseño de gameplay</p>
-									<p align=center>(Historia del juego)</p>
+									<p align=center>(Historia del juego, textos y música)</p>
 								</section>
 							</div>
 						</div>
