--- a/campaña.html
+++ b/campaña.html
@@ -213,7 +213,7 @@
 									<img class="rounded-circle" width=200px height=200px src="images/diego.jpg" alt="" />
 									<h3 align=center>Diego Martínez</h3>
 									<p align=center>Programación</p>
-									<p align=center>(Programación de la pagina web)</p>
+									<p align=center>(Programación de la pagina web y edición de vídeo)</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<img class="rounded-circle" width=200px height=200px src="images/sancho.jpg" alt="" />
