--- a/campaña.html
+++ b/campaña.html
@@ -84,6 +84,9 @@
 										<h3><u>Descubre el primer tráiler de School Nightmares</u></h3>
 										<center>
 										<iframe width="560" height="315" src="https://www.youtube.com/embed/_hjJpN_D8A8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										<video src="trailer_sn.mp4" controls>
+  											Error en el reproductor de vídeo.
+										</video>
 										</center>
 										<br>
 										<h3><u>Banda sonora</u></h3>
