--- a/campaña.html
+++ b/campaña.html
@@ -89,6 +89,7 @@
   											Error en el reproductor de vídeo.
 										</video>
 										</center>
+										<p>Algunos de los sonidos utilizados en el tráiler han sido obtenidos de: Upbeat.io, soundbible.com y freesound.org</p>
 										<br>
 										<h3><u>Banda sonora</u></h3>
 										<p>Primera canción original de School Nightmares</p>
