--- a/gameplay.html
+++ b/gameplay.html
@@ -116,6 +116,12 @@
 										<h3>Mejora tus habilidades de combate</h3>
 										<p>A medida que derrote a enemigos, Shinji será capaz de mejorar su control sobre sus poderes, gracias a un árbol de habilidades que le permitirá desde poder disparar más rápido, hasta tardar menos tiempo en cargar sus ataques.</p>
 										<a class="image fit"><img src="images/arbolhabilidades.jpg" alt="" /></a>
+										
+										<h4>Imágenes carrusel</h4>
+										
+										<a class="image fit"><img src="images/poderaire.jpg" alt="" /></a>
+										<a class="image fit"><img src="images/poderagua.jpg" alt="" /></a>
+										<a class="image fit"><img src="images/poderfuego.jpg" alt="" /></a>
 								</section>
 
 							</div>
