--- a/artwork.html
+++ b/artwork.html
@@ -130,9 +130,11 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-									<br><br>
+									<br>
 										
-										<a class="image fit"><img src="images/prota_002.jpg" alt="" /></a>
+									<h3>Imágenes carrousel</h3>
+										
+										<a class="image fit"><img src="images/caratula.jpg" alt="" /></a>
 
 									<h3>Personajes</h3>
 
